# account-web

./: Cargo.toml  README.md  index.html
src/: api.rs  components.rs  context.rs  main.rs  routes.rs  utils.rs
src/api/: endpoints.rs  request.rs
src/components/: current_sleep_status_component.rs  loading_spinner.rs  logout_button.rs  navbar.rs  session_list.rs  sleep_list.rs  stream_list.rs  style.rs
src/components/navbar/: user_menu.rs
src/components/style/: alert.rs  button.rs  centered_box.rs  form_input.rs  form_submit.rs  full_page.rs  style_options.rs  text_box.rs
src/components/style/full_page/: big_error.rs  centered_box.rs  dashboard_main_layout.rs  modal_loading_spinner.rs
src/context/: user_ctx.rs
src/routes/: check_login_required.rs  confirm_register.rs  dashboard.rs  login.rs  register.rs
src/routes/dashboard/: home.rs  profile_page.rs  sleep_history.rs  tabs.rs
