[package]
name = "account-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
api-types = { path = "../main-api/api-types" }
web-sys = { version = "0.3.55" }