[package]
name = "account-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.91"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
api-types = { path = "../main-api/api-types" }
web-sys = { version = "0.3.55", features = ["Document", "HtmlDocument"] }
gloo-net = "0.2.5"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"
html-escape = { version = "0.2.13", default-features = false }
paste = "1.0.14"
